--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "RN-crypoto",
+    "name": "Crypto Tracker",
     "slug": "RN-crypoto",
-    "version": "1.0.0",
+    "version": "1.1.2",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/arrows.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/arrows.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,13 +18,17 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "buildNumber": "1.1.0",
+      "supportsTablet": true,
+      "bundleIdentifier": "com.cryptoTracker"
     },
     "android": {
+      "versionCode": 4,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/arrows.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.cryptoTracker"
     },
     "web": {
       "favicon": "./assets/favicon.png"
